--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "forever": "^1.0.0",
-    "koa": "^2.7.0",
-    "koa-body": "^4.1.0",
-    "koa-router": "^7.4.0",
-    "koa2-cors": "^2.0.6",
-    "nanoid": "^2.0.3"
+    "forever": "^4.0.3",
+    "koa": "^2.15.0",
+    "koa-body": "^6.0.1",
+    "koa-router": "^12.0.1",
+    "koa2-cors": "^2.0.6"
   }
 }
