--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,21 @@
   },
   "version": "0.1.0",
   "description": "React Redux Thunk API",
-  "homepage": "https://henryfeesler.com/netology/11/react-redux-thunk-api",
+  "homepage": "https://henryfeesler.com/projects/netology/11/react-redux-thunk-api",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@dotenvx/dotenvx": "^0.24.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
     "classnames": "^2.5.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
@@ -28,6 +30,7 @@
   "scripts": {
     "prestart": "npm install",
     "start": "react-scripts start",
+    "deploy": "node ./scripts/deploy.js",
     "build": "dotenvx run --env-file=.env.production -- react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -49,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@jezvejs/release-tools": "^0.5.1",
+    "dotenv": "^16.4.5"
   }
 }
